
2007-09-16  Theodore Kilgore <kilgota@auburn.edu>

	* *.[c,h]: First check-in. 