@@ -58,6 +58,7 @@ struct {
 } models[] = {
         {"American Idol Keychain Camera", GP_DRIVER_STATUS_EXPERIMENTAL, 
     							    0x0979, 0x0224},
+        {"NogaNet TDC-15", GP_DRIVER_STATUS_EXPERIMENTAL, 0x0979, 0x0224},
 	{NULL,0,0,0}
 };
 
