@@ -2,3 +2,8 @@
 2007-09-16  Theodore Kilgore <kilgota@auburn.edu>
 
 	* *.[c,h]: First check-in. 
+	library.c: NogaNet TDC-15 added, reported by 
+		   Jeronimo Barraco <jerobarraco@yahoo.com.ar>
+	README.jl2005a: Updated
+	jl2005a.c: Size of 176x144 compressed photos was incorrectly reported.
+		   Patch applied. Will need testing by J. Barraco
